--- a/Backend/paytmgateway/src/main/resources/application.properties
+++ b/Backend/paytmgateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
-paytm.payment.sandbox.merchantId:YguNkF52547027074353
-paytm.payment.sandbox.merchantKey:QP&eSIfJigQukLt&
+paytm.payment.sandbox.merchantId: 
+paytm.payment.sandbox.merchantKey:
 paytm.payment.sandbox.channelId:WEB
 paytm.payment.sandbox.industryTypeId:Retail
 paytm.payment.sandbox.website:WEBSTAGING
@@ -12,8 +12,8 @@ paytm.payment.sandbox.details.CHANNEL_ID: ${paytm.payment.sandbox.channelId}
 paytm.payment.sandbox.details.INDUSTRY_TYPE_ID: ${paytm.payment.sandbox.industryTypeId}
 paytm.payment.sandbox.details.WEBSITE: ${paytm.payment.sandbox.website}
 paytm.payment.sandbox.details.CALLBACK_URL: ${paytm.payment.sandbox.callbackUrl}
-paytm.mobile = 9789285683
-paytm.email = srisaividhya5@gmail.com
+paytm.mobile = 
+paytm.email = 
 
 
 spring.data.mongodb.uri=mongodb+srv://test:test@cluster0.yehay2f.mongodb.net/test
